Improve mixin detection, remove redundant decorator